--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "q": "^1.4.1",
     "run-sequence": "^1.1.5",
     "vinyl-fs": "^2.2.1",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "yargs": "^5.0.0"
   },
   "dependencies": {
     "fs-extra": "^0.26.5",
