--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-rev":"^6.0.1",
     "gulp-shell":"^0.5.1",
     "gulp-strip-comments":"^1.0.1",
+    "gulp-sourcemaps": "1.7.1",
     "gulp-uglify":"^1.1.0",
     "gulp-util":"^3.0.7",
     "imagemin-optipng":"^4.3.0",
