--- a/package.json
+++ b/package.json
@@ -2,60 +2,58 @@
   "name": "StayNTouch",
   "version": "0.1.0",
   "devDependencies": {
-    "babel-plugin-transform-es2015-modules-amd": "^6.6.5",
-    "babel-plugin-transform-strict-mode": "^6.6.5",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-2": "^6.5.0",
-    "babelify": "^7.2.0",
-    "browserify": "^13.0.0",
-    "del": "^2.2.2",
-    "event-stream": "^3.3.2",
-    "exit": "^0.1.2",
-    "glob": "^7.0.5",
-    "glob-all": "^3.0.1",
-    "gulp": "^3.9.0",
+    "babel-plugin-transform-es2015-modules-amd": "6.8.0",
+    "babel-plugin-transform-strict-mode": "6.11.3",
+    "babel-preset-es2015": "6.16.0",
+    "babel-preset-react": "6.16.0",
+    "babel-preset-stage-2": "6.17.0",
+    "babelify": "7.3.0",
+    "browserify": "13.1.0",
+    "del": "2.2.2",
+    "event-stream": "3.3.4",
+    "exit": "0.1.2",
+    "glob": "7.1.1",
+    "glob-all": "3.1.0",
+    "gulp": "3.9.1",
     "gulp-angular-templatecache": "2.0.0",
-    "gulp-babel": "^6.1.2",
-    "gulp-concat": "^2.5.2",
-    "gulp-concat-util": "^0.5.4",
-    "gulp-cssnano": "^2.0.0",
-    "gulp-debug": "^2.1.2",
+    "gulp-babel": "6.1.2",
+    "gulp-concat": "2.6.0",
+    "gulp-concat-util": "0.5.5",
+    "gulp-cssnano": "2.1.2",
+    "gulp-debug": "2.1.2",
     "gulp-header": "1.8.8",
-    "gulp-imagemin": "^3.0.3",
-    "gulp-inject": "^4.1.0",
-    "gulp-json-editor": "^2.2.1",
-    "gulp-jsonminify": "^1.0.0",
-    "gulp-jsvalidate": "^2.1.0",
-    "gulp-less": "^3.0.5",
-    "gulp-load-plugins": "^1.3.0",
+    "gulp-imagemin": "3.0.3",
+    "gulp-inject": "4.1.0",
+    "gulp-json-editor": "2.2.1",
+    "gulp-jsonminify": "1.0.0",
+    "gulp-jsvalidate": "2.1.0",
+    "gulp-less": "3.1.0",
+    "gulp-load-plugins": "1.3.0",
     "gulp-minify-css": "1.2.4",
-    "gulp-minify-html": "^1.0.4",
-    "gulp-ng-annotate": "^2.0.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-replace": "^0.5.4",
-    "gulp-rev": "^7.1.2",
-    "gulp-shell": "^0.5.1",
-    "gulp-strip-comments": "^2.4.3",
-    "gulp-uglify": "^2.0.0",
-    "gulp-util": "^3.0.7",
-    "imagemin-pngquant": "^5.0.0",
+    "gulp-minify-html": "1.0.6",
+    "gulp-ng-annotate": "2.0.0",
+    "gulp-rename": "1.2.2",
+    "gulp-replace": "0.5.4",
+    "gulp-rev": "7.1.2",
+    "gulp-shell": "0.5.2",
+    "gulp-strip-comments": "2.4.3",
+    "gulp-uglify": "2.0.0",
+    "gulp-util": "3.0.7",
+    "imagemin-pngquant": "5.0.0",
     "jshint-html-reporter": "~0.2.0",
-    "less-plugin-clean-css": "^1.5.1",
-    "lodash": "^4.16.2",
+    "less-plugin-clean-css": "1.5.1",
+    "lodash": "4.16.4",
     "matchdep": "~1.0.1",
-    "merge-stream": "^1.0.0",
-    "mkdirp": "^0.5.1",
-    "q": "^1.4.1",
-    "run-sequence": "^1.1.5",
-    "vinyl-fs": "^2.2.1",
-    "vinyl-source-stream": "^1.1.0",
-    "yargs": "^6.0.0"
+    "merge-stream": "1.0.0",
+    "mkdirp": "0.5.1",
+    "q": "1.4.1",
+    "run-sequence": "1.2.2",
+    "yargs": "6.0.0"
   },
   "dependencies": {
-    "fs-extra": "^0.30.0",
-    "imagemin-optipng": "^5.2.1",
-    "streamqueue": "^1.1.1"
+    "fs-extra": "0.30.0",
+    "imagemin-optipng": "5.2.1",
+    "streamqueue": "1.1.1"
   },
   "optionalDependencies": {},
   "engines": {
