--- a/package.json
+++ b/package.json
@@ -7,12 +7,9 @@
     "babel-preset-es2015": "6.16.0",
     "babel-preset-react": "6.16.0",
     "babel-preset-stage-2": "6.17.0",
-    "babelify": "7.3.0",
-    "browserify": "13.1.0",
     "del": "2.2.2",
     "event-stream": "3.3.4",
     "exit": "0.1.2",
-    "glob": "7.1.1",
     "glob-all": "3.1.0",
     "gulp": "3.9.1",
     "gulp-angular-templatecache": "2.0.0",
@@ -40,10 +37,8 @@
     "gulp-uglify": "2.0.0",
     "gulp-util": "3.0.7",
     "imagemin-pngquant": "5.0.0",
-    "jshint-html-reporter": "~0.2.0",
     "less-plugin-clean-css": "1.5.1",
     "lodash": "4.16.4",
-    "matchdep": "~1.0.1",
     "merge-stream": "1.0.0",
     "mkdirp": "0.5.1",
     "q": "1.4.1",
@@ -52,8 +47,7 @@
   },
   "dependencies": {
     "fs-extra": "0.30.0",
-    "imagemin-optipng": "5.2.1",
-    "streamqueue": "1.1.1"
+    "imagemin-optipng": "5.2.1"
   },
   "optionalDependencies": {},
   "engines": {
