CICO-35346 Update card id in the bill's data on updating payment type. added globals to the eslintrc.json file eslint changes : formatting and spacing issues fixed

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,12 @@
         "es6":true,
         "jquery":true
     },
+    "globals":{
+        "sntRover":true,
+        "angular":true,
+        "BaseCtrl":true,
+        "_":true
+    },
     "installedESLint":true,
     "parserOptions":{
         "ecmaFeatures":{
