--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "del": "^1.1.1",
+    "eslint": "^3.9.1",
     "event-stream": "^3.3.2",
     "exit": "^0.1.2",
     "glob": "^7.0.5",
@@ -36,8 +37,8 @@
     "gulp-replace": "^0.5.4",
     "gulp-rev": "^6.0.1",
     "gulp-shell": "^0.5.1",
-    "gulp-strip-comments": "^1.0.1",
     "gulp-sourcemaps": "1.7.1",
+    "gulp-strip-comments": "^1.0.1",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.7",
     "imagemin-pngquant": "^4.2.0",
