CICO-35428 ESLint errors fixed in sntPaymentDirCtrl Error on credit card associated feeData calculation fixed

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,8 @@
         "sntRover":true,
         "angular":true,
         "BaseCtrl":true,
-        "_":true
+        "_":true,
+        "isEmptyObject":true
     },
     "installedESLint":true,
     "parserOptions":{
