--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,8 @@
         "isEmptyObject": true,
         "sntGuestWeb": true,
         "admin": true,
-        "ADBaseTableCtrl": true
+        "ADBaseTableCtrl": true,
+        "tzIndependentDate": true
     },
     "installedESLint":true,
     "parserOptions":{
