--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "babel-preset-react": "6.16.0",
     "babel-preset-stage-2": "6.18.0",
     "del": "2.2.2",
+    "eslint": "^3.11.1",
+    "eslint-config-angular": "^0.5.0",
+    "eslint-plugin-angular": "^1.4.1",
+    "eslint-plugin-react": "^6.8.0",
     "event-stream": "3.3.4",
     "exit": "0.1.2",
     "glob-all": "3.1.0",
