CICO-36182: eslint updates and old code correction

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -206,6 +206,7 @@
             "always"
         ],
         "angular/controller-as": "off",
-        "angular/di": ["off", "array"]
+        "angular/di": ["off", "array"],
+        "angular/controller-as-vm": "off"
     }
 }
