CICO-36501 Added getJqDateFormat to list of globals

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,8 @@
         "sntGuestWeb": true,
         "admin": true,
         "ADBaseTableCtrl": true,
-        "tzIndependentDate": true
+        "tzIndependentDate": true,
+        "getJqDateFormat": false
     },
     "installedESLint":true,
     "parserOptions":{
