CICO-40363 Initiate observeForSwipe within required controllers

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,8 @@
         "admin": true,
         "ADBaseTableCtrl": true,
         "tzIndependentDate": true,
-        "getJqDateFormat": false
+        "getJqDateFormat": false,
+        "cardReaderCtrl": false
     },
     "installedESLint":true,
     "parserOptions":{
